<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.kantiorganizer.ui.home.HomeFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_grades"
        android:name="com.example.kantiorganizer.ui.dashboard.DashboardFragment"
        android:label="@string/title_grades"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_links"
        android:name="com.example.kantiorganizer.ui.notifications.NotificationsFragment"
        android:label="@string/title_links"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.kantiorganizer.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>