<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextExam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/exam_name" />

    <EditText
        android:id="@+id/editTextSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subject" />

    <EditText
        android:id="@+id/editTextGrade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/grade"
        android:inputType="numberDecimal" />

</LinearLayout>
